--- a/styles.css
+++ b/styles.css
@@ -89,10 +89,18 @@ footer {
 .about-container p {
     text-align: left;
     font-size: 30px;
+
+    @media (max-width:600px) {
+        font-size: 10px;
+    }
 }
 
 .about-container h3 {
     font-size: 35px;
+
+    @media (max-width:600px) {
+        font-size: 20px;
+    }
 }
 
 .about-img {
@@ -101,9 +109,18 @@ footer {
     aspect-ratio: 16/9;
     /* 調整圖片的寬度 */
     margin-right: 20px;
+
     /* 與文字之間的間距 */
     /* border-radius: 50%; */
     /* 如果你希望圖片是圓形的 */
+    @media (max-width:600px) {
+        text-align: right;
+        width: 80;
+        height: 100px;
+        aspect-ratio: 16/9;
+        /* 調整圖片的寬度 */
+        margin-right: 20px;
+    }
 }
 
 .n-img {
@@ -113,14 +130,11 @@ footer {
     /* 與文字之間的間距 */
     border-radius: 50%;
     float: right;
-    /* 如果你希望圖片是圓形的 */
+
 }
 
 /* 調整文字在關於我部分的樣式 */
-.container h3,
-p {
-    text-align: center;
-}
+
 
 
 .container {
@@ -135,6 +149,10 @@ p {
     padding: 10px;
     width: 100px;
     font-size: 30px;
+
+    @media (max-width:600px) {
+        font-size: 10px;
+    }
 }
 
 .box-1 {
@@ -161,6 +179,20 @@ p {
     border-bottom-left-radius: 50% 10%;
     border-bottom-right-radius: 50% 10%;
     margin-bottom: 150px;
+
+    @media (max-width:600px) {
+        padding-top: 15%;
+        width: 100%;
+        height: 200px;
+        aspect-ratio: 16/9;
+        display: block;
+        background-image: url("背景2.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        border-bottom-left-radius: 50% 10%;
+        border-bottom-right-radius: 50% 10%;
+        margin-bottom: 50px;
+    }
 }
 
 .quote {
