--- a/styles.css
+++ b/styles.css
@@ -99,9 +99,9 @@ nav ul li a {
 
 
 
-main {
-    /* margin: 20px 0; */
-}
+/* main {
+    margin: 20px 0;
+} */
 
 
 .title-p {
@@ -150,8 +150,14 @@ main {
     width: 100%;
     height: 300px;
     margin: 0px 20px 0px 20px;
-    /* align-items: flex-start; */
-    /* font-size: 30px; */
+
+    @media (max-width:600px) {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 300px;
+        margin: 0px 20px 0px 20px;
+    }
 }
 
 .about-container p {
@@ -161,7 +167,7 @@ main {
     margin-top: -10px;
 
     @media (max-width:600px) {
-        font-size: 10px;
+        font-size: 20px;
     }
 }
 
@@ -171,7 +177,7 @@ main {
     margin-top: -10px;
 
     @media (max-width:600px) {
-        font-size: 20px;
+        font-size: 30px;
     }
 }
 
@@ -183,10 +189,10 @@ main {
 
     @media (max-width:600px) {
         text-align: right;
-        width: 80;
-        height: 100px;
-        aspect-ratio: 16/9;
-        margin-right: 20px;
+        width: 200px;
+        /* height: 100px; */
+        /* aspect-ratio: 16/9; */
+        margin-bottom: 20px;
     }
 }
 
@@ -206,32 +212,44 @@ main {
 
 #about {
     margin: 250px 20px 0px 20px;
-    background: #fff;
+    /* background: #fff; */
     position: relative;
     justify-content: center;
     width: 100%;
     height: 40vh;
-    border-radius: 25%;
+
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
+
+    @media (max-width:600px) {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        position: relative;
+        top: -200px;
+        /* right: 100px; */
+    }
 }
 
 .container div {
     /* border: 1px solid rgb(202, 201, 201); */
     padding: 10px;
-    margin: 20px;
-    /* width: 100%; */
-    /* height: 200px; */
+    margin: 10px;
+    border-radius: 15%;
+    background-color: #fff;
     font-size: 30px;
     text-align: center;
 
     @media (max-width:600px) {
         font-size: 10px;
+        border-radius: 15%;
+        background-color: #fff;
         text-align: center;
+        font-size: 15px;
     }
 }
 
@@ -251,13 +269,25 @@ main {
 footer {
     background: #3586ff;
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     min-height: 100px;
     padding: 20px 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    @media (max-width:600px) {
+        background: #3586ff;
+        position: relative;
+        min-height: 100px;
+        height: 50px;
+        padding: 20px 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
 }
 
 footer .social_icon {
@@ -265,6 +295,7 @@ footer .social_icon {
     display: flex;
     justify-content: center;
     align-items: center;
+    /* text-align: center; */
     margin: 10px 0;
     flex-wrap: wrap;
 }
@@ -280,6 +311,15 @@ footer .social_icon li a {
     display: inline-block;
     transition: 0.5s;
     opacity: 0.75;
+
+    @media (max-width:600px) {
+        font-size: 1.5em;
+        color: #fff;
+        margin: 0 10px;
+        display: inline-block;
+        transition: 0.5s;
+        opacity: 0.75;
+    }
 }
 
 footer .social_icon li a:hover {
@@ -293,6 +333,14 @@ footer p {
     margin-top: 15px;
     margin-bottom: 10px;
     font-size: 1.5em;
+
+    @media (max-width:600px) {
+        color: #fff;
+        text-align: center;
+        margin-top: 15px;
+        margin-bottom: 10px;
+        font-size: 0.75em;
+    }
 }
 
 footer .wave {
@@ -303,6 +351,17 @@ footer .wave {
     height: 100px;
     background: url(wave.png);
     background-size: 1100px 100px;
+
+    @media (max-width:600px) {
+        position: absolute;
+        top: -35px;
+        left: 0;
+        width: 100%;
+        height: 50px;
+        background: url(wave.png);
+        background-size: 600px 50px;
+        /* background-repeat: no-repeat; */
+    }
 }
 
 footer .wave#wave1 {
